Fix: Moved navigation align when display-width < 600px to navigation.css

--- a/backup_service/web/static/css/aliases.css
+++ b/backup_service/web/static/css/aliases.css
@@ -137,10 +137,6 @@
         display: none;
     }
 
-    .navigation {
-        align-self: center !important;
-    }
-
     .aliases__wrap {
         border-radius: 0;
     }
