--- a/backup_service/web/static/css/navigation.css
+++ b/backup_service/web/static/css/navigation.css
@@ -8,6 +8,7 @@
     gap: 30px;
     background: white;
     border-radius: var(--border-radius);
+    transition: 200ms ease-in;
 }
 
 .navigation__button {
@@ -22,4 +23,10 @@
 
 .navigation__button:hover {
     color: var(--secondary);
+}
+
+@media screen and (max-width: 600px) {
+    .navigation {
+        align-self: center;
+    }
 }
